AUTOMAKE_OPTIONS = subdir-objects
EXTRA_DIST = example.sh
TESTS =
include $(top_srcdir)/examples/add_device_simple/add_device_simple.am
include $(top_srcdir)/examples/arf/arf.am
include $(top_srcdir)/examples/arf_res_sharing/arf_res_sharing.am
include $(top_srcdir)/examples/breakout/breakout.am
include $(top_srcdir)/examples/CHStone/CHStone.am
include $(top_srcdir)/examples/cpp_examples/cpp_examples.am
include $(top_srcdir)/examples/crc/crc.am
include $(top_srcdir)/examples/crc_yosys/crc_yosys.am
include $(top_srcdir)/examples/crypto_designs/crypto_designs.am
include $(top_srcdir)/examples/discrepancy-parallel/discrepancy-parallel.am
include $(top_srcdir)/examples/fft_example/fft_example.am
include $(top_srcdir)/examples/file_simulate/file_simulate.am
include $(top_srcdir)/examples/fortran/fortran.am
include $(top_srcdir)/examples/function_pointers/function_pointers.am
include $(top_srcdir)/examples/hls_study/hls_study.am
include $(top_srcdir)/examples/IP_integration/IP_integration.am
include $(top_srcdir)/examples/led_example/led_example.am
include $(top_srcdir)/examples/libm/libm.am
include $(top_srcdir)/examples/MachSuite/MachSuite.am
include $(top_srcdir)/examples/mm/mm.am
include $(top_srcdir)/examples/mm_float/mm_float.am
include $(top_srcdir)/examples/omp_simd/omp_simd.am
include $(top_srcdir)/examples/onnx/onnx.am
include $(top_srcdir)/examples/parallel_queries/parallel_queries.am
include $(top_srcdir)/examples/pong/pong.am
include $(top_srcdir)/examples/python-bindings/python-bindings.am
include $(top_srcdir)/examples/simple_asm/simple_asm.am
include $(top_srcdir)/examples/softfloat/softfloat.am
include $(top_srcdir)/examples/taste/taste.am
include $(top_srcdir)/examples/VGA/VGA.am
include $(top_srcdir)/examples/VGA_Nexys4/VGA_Nexys4.am
include $(top_srcdir)/examples/rosetta/rosetta.am


examples_dir = $(pkgdatadir)/examples
examples_arf_dir = $(examples_dir)/arf
examples_arf__DATA = ../examples/arf/bambu.sh ../examples/arf/module.c ../examples/arf/README.txt ../examples/arf/test.xml

