AUTOMAKE_OPTIONS = subdir-objects
EXTRA_DIST = \
    panda_bench_altera_list \
    panda_bench_altera.sh \
    panda_bench_hw_list \
    panda_bench_hw.sh \
    panda_bench_lattice_list \
    panda_bench_lattice.sh \
    panda_bench_nanoxplore_list \
    panda_bench_nanoxplore.sh \
    panda_bench_sim_list \
    panda_bench_sim.sh \
    panda_bench_xilinx_ise_list \
    panda_bench_xilinx_ise.sh \
    panda_bench_xilinx_vvd_list \
    panda_bench_xilinx_vvd.sh \
    panda_bench_yosys_list \
    panda_bench_yosys.sh
TESTS =
include $(top_srcdir)/examples/add_device_simple/add_device_simple.am
include $(top_srcdir)/examples/arf/arf.am
include $(top_srcdir)/examples/arf_res_sharing/arf_res_sharing.am
include $(top_srcdir)/examples/breakout/breakout.am
include $(top_srcdir)/examples/CHStone/CHStone.am
include $(top_srcdir)/examples/cpp_examples/cpp_examples.am
include $(top_srcdir)/examples/crc/crc.am
include $(top_srcdir)/examples/crypto_designs/crypto_designs.am
include $(top_srcdir)/examples/discrepancy-parallel/discrepancy-parallel.am
include $(top_srcdir)/examples/fft_example/fft_example.am
include $(top_srcdir)/examples/file_simulate/file_simulate.am
include $(top_srcdir)/examples/fortran/fortran.am
include $(top_srcdir)/examples/function_pointers/function_pointers.am
include $(top_srcdir)/examples/hls_study/hls_study.am
include $(top_srcdir)/examples/IP_integration/IP_integration.am
include $(top_srcdir)/examples/led_example/led_example.am
include $(top_srcdir)/examples/libm/libm.am
include $(top_srcdir)/examples/MachSuite/MachSuite.am
include $(top_srcdir)/examples/mm/mm.am
include $(top_srcdir)/examples/mm_float/mm_float.am
include $(top_srcdir)/examples/omp_simd/omp_simd.am
include $(top_srcdir)/examples/onnx/onnx.am
include $(top_srcdir)/examples/parallel_queries/parallel_queries.am
include $(top_srcdir)/examples/pong/pong.am
include $(top_srcdir)/examples/python-bindings/python-bindings.am
include $(top_srcdir)/examples/rosetta/rosetta.am
include $(top_srcdir)/examples/sha-256/sha-256.am
include $(top_srcdir)/examples/simple_asm/simple_asm.am
include $(top_srcdir)/examples/softfloat/softfloat.am
include $(top_srcdir)/examples/taste/taste.am
include $(top_srcdir)/examples/truefloat/truefloat.am
include $(top_srcdir)/examples/VGA/VGA.am
include $(top_srcdir)/examples/VGA_Nexys4/VGA_Nexys4.am
