EXTRA_DIST = GRLIB/grlib/amba/amba.vhd GRLIB/grlib/amba/devices.vhd GRLIB/grlib/amba/ahbctrl.vhd GRLIB/grlib/amba/apbctrl.vhd GRLIB/grlib/stdlib/stdlib.vhd GRLIB/grlib/stdlib/version.vhd GRLIB/techmap/maps/inpad.vhd GRLIB/techmap/maps/outpad.vhd GRLIB/techmap/maps/clkpad.vhd GRLIB/techmap/maps/iopad.vhd GRLIB/techmap/maps/allclkgen.vhd GRLIB/techmap/maps/iodpad.vhd GRLIB/techmap/maps/toutpad.vhd GRLIB/techmap/maps/allpads.vhd GRLIB/techmap/maps/odpad.vhd GRLIB/techmap/maps/clkgen.vhd GRLIB/techmap/gencomp GRLIB/techmap/gencomp/gencomp.vhd GRLIB/techmap/unisim/clkgen_unisim.vhd GRLIB/techmap/unisim/pads_unisim.vhd GRLIB/gaisler/misc/misc.vhd GRLIB/gaisler/misc/ahbmst.vhd GRLIB/gaisler/misc/rstgen.vhd GRLIB/gaisler/pci/pci.vhd GRLIB/gaisler/pci/pci_target.vhd GRLIB/gaisler/pci/pcipads.vhd\
mockturtle/experiments/experiments.hpp\
mockturtle/include/mockturtle/algorithms/aig_resub.hpp\
mockturtle/include/mockturtle/algorithms/akers_synthesis.hpp\
mockturtle/include/mockturtle/algorithms/bi_decomposition.hpp\
mockturtle/include/mockturtle/algorithms/cell_window.hpp\
mockturtle/include/mockturtle/algorithms/cleanup.hpp\
mockturtle/include/mockturtle/algorithms/cnf.hpp\
mockturtle/include/mockturtle/algorithms/collapse_mapped.hpp\
mockturtle/include/mockturtle/algorithms/cut_enumeration/cnf_cut.hpp\
mockturtle/include/mockturtle/algorithms/cut_enumeration/gia_cut.hpp\
mockturtle/include/mockturtle/algorithms/cut_enumeration.hpp\
mockturtle/include/mockturtle/algorithms/cut_enumeration/mf_cut.hpp\
mockturtle/include/mockturtle/algorithms/cut_enumeration/spectr_cut.hpp\
mockturtle/include/mockturtle/algorithms/cut_rewriting.hpp\
mockturtle/include/mockturtle/algorithms/detail/mffc_utils.hpp\
mockturtle/include/mockturtle/algorithms/dont_cares.hpp\
mockturtle/include/mockturtle/algorithms/dsd_decomposition.hpp\
mockturtle/include/mockturtle/algorithms/equivalence_checking.hpp\
mockturtle/include/mockturtle/algorithms/gates_to_nodes.hpp\
mockturtle/include/mockturtle/algorithms/lut_mapping.hpp\
mockturtle/include/mockturtle/algorithms/mig_algebraic_rewriting.hpp\
mockturtle/include/mockturtle/algorithms/mig_resub.hpp\
mockturtle/include/mockturtle/algorithms/miter.hpp\
mockturtle/include/mockturtle/algorithms/node_resynthesis/akers.hpp\
mockturtle/include/mockturtle/algorithms/node_resynthesis/bidecomposition.hpp\
mockturtle/include/mockturtle/algorithms/node_resynthesis/direct.hpp\
mockturtle/include/mockturtle/algorithms/node_resynthesis/dsd.hpp\
mockturtle/include/mockturtle/algorithms/node_resynthesis/exact.hpp\
mockturtle/include/mockturtle/algorithms/node_resynthesis.hpp\
mockturtle/include/mockturtle/algorithms/node_resynthesis/mig_npn.hpp\
mockturtle/include/mockturtle/algorithms/node_resynthesis/shannon.hpp\
mockturtle/include/mockturtle/algorithms/node_resynthesis/xag_minmc.hpp\
mockturtle/include/mockturtle/algorithms/node_resynthesis/xag_npn.hpp\
mockturtle/include/mockturtle/algorithms/node_resynthesis/xmg_npn.hpp\
mockturtle/include/mockturtle/algorithms/reconv_cut2.hpp\
mockturtle/include/mockturtle/algorithms/reconv_cut.hpp\
mockturtle/include/mockturtle/algorithms/refactoring.hpp\
mockturtle/include/mockturtle/algorithms/resubstitution.hpp\
mockturtle/include/mockturtle/algorithms/satlut_mapping.hpp\
mockturtle/include/mockturtle/algorithms/shannon_decomposition.hpp\
mockturtle/include/mockturtle/algorithms/simulation.hpp\
mockturtle/include/mockturtle/algorithms/xmg_algebraic_rewriting.hpp\
mockturtle/include/mockturtle/generators/arithmetic.hpp\
mockturtle/include/mockturtle/generators/control.hpp\
mockturtle/include/mockturtle/generators/majority.hpp\
mockturtle/include/mockturtle/generators/modular_arithmetic.hpp\
mockturtle/include/mockturtle/generators/random_logic_generator.hpp\
mockturtle/include/mockturtle/generators/sorting.hpp\
mockturtle/include/mockturtle/interface.hpp\
mockturtle/include/mockturtle/io/aiger_reader.hpp\
mockturtle/include/mockturtle/io/bench_reader.hpp\
mockturtle/include/mockturtle/io/blif_reader.hpp\
mockturtle/include/mockturtle/io/pla_reader.hpp\
mockturtle/include/mockturtle/io/verilog_reader.hpp\
mockturtle/include/mockturtle/io/write_bench.hpp\
mockturtle/include/mockturtle/io/write_blif.hpp\
mockturtle/include/mockturtle/io/write_dimacs.hpp\
mockturtle/include/mockturtle/io/write_dot.hpp\
mockturtle/include/mockturtle/io/write_verilog.hpp\
mockturtle/include/mockturtle/mockturtle.hpp\
mockturtle/include/mockturtle/networks/aig.hpp\
mockturtle/include/mockturtle/networks/detail/foreach.hpp\
mockturtle/include/mockturtle/networks/events.hpp\
mockturtle/include/mockturtle/networks/klut.hpp\
mockturtle/include/mockturtle/networks/mig.hpp\
mockturtle/include/mockturtle/networks/storage.hpp\
mockturtle/include/mockturtle/networks/xag.hpp\
mockturtle/include/mockturtle/networks/xmg.hpp\
mockturtle/include/mockturtle/properties/migcost.hpp\
mockturtle/include/mockturtle/traits.hpp\
mockturtle/include/mockturtle/utils/algorithm.hpp\
mockturtle/include/mockturtle/utils/cuts.hpp\
mockturtle/include/mockturtle/utils/mixed_radix.hpp\
mockturtle/include/mockturtle/utils/node_map.hpp\
mockturtle/include/mockturtle/utils/progress_bar.hpp\
mockturtle/include/mockturtle/utils/stopwatch.hpp\
mockturtle/include/mockturtle/utils/string_utils.hpp\
mockturtle/include/mockturtle/utils/truth_table_cache.hpp\
mockturtle/include/mockturtle/views/cut_view.hpp\
mockturtle/include/mockturtle/views/depth_view.hpp\
mockturtle/include/mockturtle/views/fanout_view2.hpp\
mockturtle/include/mockturtle/views/fanout_view.hpp\
mockturtle/include/mockturtle/views/immutable_view.hpp\
mockturtle/include/mockturtle/views/mapping_view.hpp\
mockturtle/include/mockturtle/views/mffc_view.hpp\
mockturtle/include/mockturtle/views/names_view.hpp\
mockturtle/include/mockturtle/views/topo_view.hpp\
mockturtle/include/mockturtle/views/window_view.hpp\
mockturtle/lib/abcsat/abc/abc_global.h\
mockturtle/lib/abcsat/abc/AbcGlucose.h\
mockturtle/lib/abcsat/abc/abc_namespaces.h\
mockturtle/lib/abcsat/abc/Alg.h\
mockturtle/lib/abcsat/abc/Alloc.h\
mockturtle/lib/abcsat/abc/BoundedQueue.h\
mockturtle/lib/abcsat/abc/Constants.h\
mockturtle/lib/abcsat/abc/Dimacs.h\
mockturtle/lib/abcsat/abc/Heap.h\
mockturtle/lib/abcsat/abc/IntTypes.h\
mockturtle/lib/abcsat/abc/Map.h\
mockturtle/lib/abcsat/abc/pstdint.h\
mockturtle/lib/abcsat/abc/Queue.h\
mockturtle/lib/abcsat/abc/satClause.h\
mockturtle/lib/abcsat/abc/satSolver.h\
mockturtle/lib/abcsat/abc/satStore.h\
mockturtle/lib/abcsat/abc/satVec.h\
mockturtle/lib/abcsat/abc/SimpSolver.h\
mockturtle/lib/abcsat/abc/Solver.h\
mockturtle/lib/abcsat/abc/SolverTypes.h\
mockturtle/lib/abcsat/abc/Sort.h\
mockturtle/lib/abcsat/abc/system.h\
mockturtle/lib/abcsat/abc/utilDouble.h\
mockturtle/lib/abcsat/abc/Vec.h\
mockturtle/lib/abcsat/abc/vecInt.h\
mockturtle/lib/abcsat/abc/vecWec.h\
mockturtle/lib/abcsat/abc/XAlloc.h\
mockturtle/lib/ez/ez/direct_iterator.hpp\
mockturtle/lib/fmt/fmt/chrono.h\
mockturtle/lib/fmt/fmt/color.h\
mockturtle/lib/fmt/fmt/core.h\
mockturtle/lib/fmt/fmt/format.h\
mockturtle/lib/fmt/fmt/format-inl.h\
mockturtle/lib/fmt/fmt/locale.h\
mockturtle/lib/fmt/fmt/ostream.h\
mockturtle/lib/fmt/fmt/posix.h\
mockturtle/lib/fmt/fmt/printf.h\
mockturtle/lib/fmt/fmt/ranges.h\
mockturtle/lib/fmt/fmt/time.h\
mockturtle/lib/json/nlohmann/json.hpp\
mockturtle/lib/kitty/kitty/affine.hpp\
mockturtle/lib/kitty/kitty/algorithm.hpp\
mockturtle/lib/kitty/kitty/bit_operations.hpp\
mockturtle/lib/kitty/kitty/cnf.hpp\
mockturtle/lib/kitty/kitty/constructors.hpp\
mockturtle/lib/kitty/kitty/cube.hpp\
mockturtle/lib/kitty/kitty/decomposition.hpp\
mockturtle/lib/kitty/kitty/detail/constants.hpp\
mockturtle/lib/kitty/kitty/detail/linear_constants.hpp\
mockturtle/lib/kitty/kitty/detail/mscfix.hpp\
mockturtle/lib/kitty/kitty/detail/utils.hpp\
mockturtle/lib/kitty/kitty/dynamic_truth_table.hpp\
mockturtle/lib/kitty/kitty/enumeration.hpp\
mockturtle/lib/kitty/kitty/esop.hpp\
mockturtle/lib/kitty/kitty/hash.hpp\
mockturtle/lib/kitty/kitty/implicant.hpp\
mockturtle/lib/kitty/kitty/isop.hpp\
mockturtle/lib/kitty/kitty/kitty.hpp\
mockturtle/lib/kitty/kitty/npn.hpp\
mockturtle/lib/kitty/kitty/operations.hpp\
mockturtle/lib/kitty/kitty/operators.hpp\
mockturtle/lib/kitty/kitty/permutation.hpp\
mockturtle/lib/kitty/kitty/print.hpp\
mockturtle/lib/kitty/kitty/properties.hpp\
mockturtle/lib/kitty/kitty/spectral.hpp\
mockturtle/lib/kitty/kitty/static_truth_table.hpp\
mockturtle/lib/kitty/kitty/traits.hpp\
mockturtle/lib/lorina/lorina/aiger.hpp\
mockturtle/lib/lorina/lorina/bench.hpp\
mockturtle/lib/lorina/lorina/blif.hpp\
mockturtle/lib/lorina/lorina/common.hpp\
mockturtle/lib/lorina/lorina/detail/tokenizer.hpp\
mockturtle/lib/lorina/lorina/detail/utils.hpp\
mockturtle/lib/lorina/lorina/diagnostics.hpp\
mockturtle/lib/lorina/lorina/lorina.hpp\
mockturtle/lib/lorina/lorina/pla.hpp\
mockturtle/lib/lorina/lorina/verilog.hpp\
mockturtle/lib/lorina/lorina/verilog_regex.hpp\
mockturtle/lib/percy/percy/chain.hpp\
mockturtle/lib/percy/percy/cnf.hpp\
mockturtle/lib/percy/percy/concurrentqueue.h\
mockturtle/lib/percy/percy/dag_generation.hpp\
mockturtle/lib/percy/percy/dag.hpp\
mockturtle/lib/percy/percy/encoders/aig_encoder.hpp\
mockturtle/lib/percy/percy/encoders/ditt_encoder.hpp\
mockturtle/lib/percy/percy/encoders/ditt_maj_encoder.hpp\
mockturtle/lib/percy/percy/encoders/encoder.hpp\
mockturtle/lib/percy/percy/encoders.hpp\
mockturtle/lib/percy/percy/encoders/maj_encoder.hpp\
mockturtle/lib/percy/percy/encoders/mig_encoder.hpp\
mockturtle/lib/percy/percy/encoders/msv_encoder.hpp\
mockturtle/lib/percy/percy/encoders/partial_dag_encoder.hpp\
mockturtle/lib/percy/percy/encoders/ssv_dag_encoder.hpp\
mockturtle/lib/percy/percy/encoders/ssv_encoder.hpp\
mockturtle/lib/percy/percy/encoders/ssv_fence2_encoder.hpp\
mockturtle/lib/percy/percy/encoders/ssv_fence_encoder.hpp\
mockturtle/lib/percy/percy/fence.hpp\
mockturtle/lib/percy/percy/io.hpp\
mockturtle/lib/percy/percy/mig.hpp\
mockturtle/lib/percy/percy/misc.hpp\
mockturtle/lib/percy/percy/partial_dag.hpp\
mockturtle/lib/percy/percy/percy.hpp\
mockturtle/lib/percy/percy/sat_circuits.hpp\
mockturtle/lib/percy/percy/solvers/bmcg_sat.hpp\
mockturtle/lib/percy/percy/solvers/bsat2.hpp\
mockturtle/lib/percy/percy/solvers/cmsat.hpp\
mockturtle/lib/percy/percy/solvers/glucose.hpp\
mockturtle/lib/percy/percy/solvers.hpp\
mockturtle/lib/percy/percy/solvers/satoko.hpp\
mockturtle/lib/percy/percy/solvers/solver_wrapper.hpp\
mockturtle/lib/percy/percy/spec.hpp\
mockturtle/lib/percy/percy/tt_utils.hpp\
mockturtle/lib/rang/rang/rang.hpp\
mockturtle/lib/sparsepp/sparsepp/spp_config.h\
mockturtle/lib/sparsepp/sparsepp/spp_dlalloc.h\
mockturtle/lib/sparsepp/sparsepp/spp.h\
mockturtle/lib/sparsepp/sparsepp/spp_memory.h\
mockturtle/lib/sparsepp/sparsepp/spp_smartptr.h\
mockturtle/lib/sparsepp/sparsepp/spp_stdint.h\
mockturtle/lib/sparsepp/sparsepp/spp_timer.h\
mockturtle/lib/sparsepp/sparsepp/spp_traits.h\
mockturtle/lib/sparsepp/sparsepp/spp_utils.h\
mockturtle/test/catch2/catch.hpp\
mockturtle/test/test_networks.hpp\
mockturtle/docs/algorithms/extract_linear.rst\
mockturtle/docs/algorithms/linear_resynthesis.rst\
mockturtle/include/mockturtle/algorithms/extract_linear.hpp\
mockturtle/include/mockturtle/algorithms/linear_resynthesis.hpp\
mockturtle/include/mockturtle/generators/majority_n.hpp\
mockturtle/include/mockturtle/properties/mccost.hpp\
mockturtle/test/algorithms/extract_linear.cpp\
mockturtle/test/algorithms/linear_resynthesis.cpp\
mockturtle/test/generators/majority_n.cpp\
mockturtle/test/properties/mccost.cpp\
mockturtle/test/views/names_view.cpp


SUBDIRS =
DIST_SUBDIRS =

if BUILD_ABC
   noinst_SCRIPTS =create_abc
endif

if BUILD_BEAGLE
   SUBDIRS += beagle
endif

if BUILD_COIN_OR
   SUBDIRS += Coin-Cbc
   lib_LTLIBRARIES = libCoin_Cbc.la
   libCoin_Cbc_la_SOURCES =
   libCoin_Cbc_la_LIBADD = Coin-Cbc/Cbc/src/libCbcSolver.la \
      Coin-Cbc/Cbc/src/OsiCbc/libOsiCbc.la \
      Coin-Cbc/Cbc/src/libCbc.la \
      Coin-Cbc/Clp/src/OsiClp/libOsiClp.la \
      Coin-Cbc/Cgl/src/libCgl.la \
      Coin-Cbc/Clp/src/libClp.la \
      Coin-Cbc/Osi/src/Osi/libOsi.la \
      Coin-Cbc/CoinUtils/src/libCoinUtils.la
endif

if BUILD_CROSSTOOL_NG
   SUBDIRS += crosstool-ng
endif

if BUILD_METSLIB
   SUBDIRS += metslib-0.5.3
   DIST_SUBDIRS += metslib-0.5.3
endif

if BUILD_TRNG
   SUBDIRS += trng-4.17
   DIST_SUBDIRS += trng-4.17
endif


if BUILD_NODELIB
   SUBDIRS += nodelib
endif

if BUILD_LIBERTY_PARSER
   SUBDIRS += liberty_parser
endif

if BUILD_LP_SOLVE
   SUBDIRS += lpsolve5
endif

if BUILD_SIMIT
   SUBDIRS += SimIt-PoliMi
endif

if BUILD_FLOPOCO
   SUBDIRS += flopoco
   DIST_SUBDIRS += sollya flopoco libfplll-4.0.3
endif

if BUILD_VFLIB
   SUBDIRS += vflib
endif

CLEANFILES = $(noinst_SCRIPT)

if BUILD_LIB_CUDD
   SUBDIRS += cudd
endif

create_abc:Makefile
	touch create_abc
	tar xzf $(top_srcdir)/abc70930.tar.gz
	echo "cd abc70930; make"> create_abc
	chmod +x create_abc
	./create_abc

clean-local:
	-rm -rf abc

.PHONY documentation: documentation-recursive
.PHONY documentation-tag:documentation-tag-recursive
documentation: 
documentation-tag:

if USE_GRLIB
install-exec-hook:
	cp -r $(top_srcdir)/ext/GRLIB  $(libdir)
endif

noinst_LTLIBRARIES =
METASOURCES = AUTO

if BUILD_MOCKTURTLE
noinst_LTLIBRARIES += lib_mockturtle.la
lib_mockturtle_la_SOURCES = mockturtle/lib/abcsat/AbcGlucose.cpp mockturtle/lib/abcsat/Glucose.cpp mockturtle/lib/abcsat/satSolver.cpp mockturtle/lib/abcsat/satStore.cpp  mockturtle/lib/abcsat/SimpSolver.cpp
lib_mockturtle_la_CPPFLAGS = \
      -I$(top_srcdir)/ext/mockturtle/lib/abcsat/\
      -DLIN64 -DABC_NAMESPACE=pabc -DABC_NO_USE_READLINE
endif
CXXFLAGS = -Wno-error=undef -Wno-unknown-pragmas -Wno-sign-conversion -Wno-conversion -Wno-shadow -Wno-switch-enum -Wno-unused-parameter -Wno-old-style-cast -Wno-cast-qual -Wno-zero-as-null-pointer-constant -Wno-non-virtual-dtor -Wno-pedantic -Wno-parentheses -Wno-switch-default -Wno-ctor-dtor-privacy -Wno-overloaded-virtual -Wno-sign-promo -fpermissive

#define FMT_HEADER_ONLY 1


